--- a/shop_features/views/views.xml
+++ b/shop_features/views/views.xml
@@ -1,18 +1,18 @@
 <odoo>
   <data>
-    <record id="view_product_form_inherit" model="ir.ui.view">
+    <!-- <record id="view_product_form_inherit" model="ir.ui.view">
       <field name="name">product.template.form.inherit</field>
       <field name="model">product.template</field>
       <field name="inherit_id" ref="product.product_template_form_view"/>
       <field name="arch" type="xml">
           <xpath expr="//header" position="inside">
-              <button name="generate_product"
+              <button name="fetch_product_info"
                       string="Importar desde API externa"
                       type="object"
                       class="btn-primary"/>
           </xpath>
       </field>
-  </record>
+  </record> -->
   
 
   </data>
